@@ -174,6 +174,7 @@ features:
   binary, $(INSTALLDIR)/bin, and include headers, $(INSTALLDIR)/include, the default value is the empty string
 - new target in Makefile "install" performs "make" and copies the include headers
 - new target in Makefile "uninstall" removes libraries, binary, and include headers
+- cons_logicor is now abled to replace all aggregated variables in presolving by there active or negation of an active variable counterpart
 
 design:
 - SCIP_HASHMAP now works also without block memory
